# snake-game-cpp

./: CMakeLists.txt  GEMINI.md  README.md
include/: Game.h  Shader.h  Snake.h
include/glad/: glad.h
res/shaders/: snakeColor.frag  snakeVertex.vert
src/: Game.cpp  Shader.cpp  Snake.cpp  glad.c  main.cpp
